Fixed contrast issues

--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -15,11 +15,11 @@
 }
 
 .Already {
-  color: rgb(80, 112, 255);
-  text-shadow: -1px 1px 2px #000,
+  color: black;
+  /* text-shadow: -1px 1px 2px #000,
   1px 1px 2px #000,
   1px -1px 0 #000,
-  -1px -1px 0 #000000;
+  -1px -1px 0 #000000; */
 }
 
 .submit {
