--- a/src/routes/LearningRoute/LearningRoute.css
+++ b/src/routes/LearningRoute/LearningRoute.css
@@ -3,6 +3,10 @@
   border-radius: 5px;
   font-size: 19px;
   padding: 1%;
+  color: black;
+  text-shadow: none;
+  font-weight: bold;
+  box-shadow: 0 0 3px #333;
 }
 
 .GuessForm {
@@ -22,7 +26,7 @@ legend {
 .Scores {
   border: 2px solid black;
   border-radius: 5px;
-  background: rgba(83, 92, 221, 0.8);
+  background: rgba(0, 74, 185, 0.8);
   color: #fff;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   margin: 20px;
@@ -30,7 +34,7 @@ legend {
 
 .LearningTitle {
   font-size: 150%;
-  color: rgb(92, 157, 255);
+  color: rgb(0, 74, 185);
   text-shadow: -1px 1px 2px #000,
   1px 1px 2px #000,
   1px -1px 0 #000,
