--- a/src/routes/LoginRoute/LoginRoute.css
+++ b/src/routes/LoginRoute/LoginRoute.css
@@ -14,7 +14,7 @@
 .LoginRoute h2 {
   font-size: 200%;
   margin: 3%;
-  color: rgb(92, 157, 255);
+  color: rgb(0, 74, 185);
   text-shadow: -1px 1px 2px #000,
   1px 1px 2px #000,
   1px -1px 0 #000,
