--- a/src/routes/RegistrationRoute/RegistrationRoute.css
+++ b/src/routes/RegistrationRoute/RegistrationRoute.css
@@ -17,7 +17,7 @@
 .RegistrationCard h2 {
   font-size: 200%;
   margin: 3%;
-  color: rgb(92, 157, 255);
+  color: rgb(0, 74, 185);
   text-shadow: -1px 1px 2px #000,
   1px 1px 2px #000,
   1px -1px 0 #000,
@@ -25,11 +25,11 @@
 }
 
 .Description {
-  color: rgb(92, 157, 255);
-  text-shadow: -1px 1px 2px #000,
+  color: black;
+  /* text-shadow: -1px 1px 2px #000,
   1px 1px 2px #000,
   1px -1px 0 #000,
-  -1px -1px 0 #000000;
+  -1px -1px 0 #000000; */
   background: rgb(253, 202, 255);
   border: 2px solid black;
   border-radius: 5px;
